# algae-medium-monitor

./: .gitignore  Cargo.toml  DISPLAY_PINOUT.md  DISPLAY_WIRING.md  README.md  avr-atmega328p.json  build.ps1  flash.ps1
.cargo/: config.toml
src/: adc.rs  air.rs  display.rs  display_controller.rs  ds18b20.rs  main.rs  ph.rs  sensor_manager.rs  temperature.rs  uart.rs
